--- a/app/views/resources/_resource.html.slim
+++ b/app/views/resources/_resource.html.slim
@@ -1,5 +1,7 @@
 li
   - if resource.link?
     = link_to resource.title, resource.link, class: 'underline'
-  - else
+  - elsif resource.document? && resource.document.present?
     = link_to resource.title, url_for(resource.document), class: 'underline', target: '_blank'
+  - else
+    p.font-bold = resource.title
