--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -8,7 +8,7 @@
 
   .flex
     .w-2/3
-      h3.text-2xl.font-bold.mb-3 Les actions en lien avec cette mission
+      h3.text-2xl.font-bold.mb-3 Les actions en lien avec ce thème
       ul
         - @theme.activities.enabled.order_by_theme_interface_position.each do |activity|
           li = link_to activity.title, activity_path(activity), class: "underline"
@@ -19,6 +19,8 @@
         ul
           = render partial: 'resources/resource', collection: @theme.resources, as: :resource
 
-  h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec cette mission
-  - @theme.posts.each do |post|
-    = render 'posts/card', post: post
+  h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec ce thème
+  .flex
+    - @theme.posts.each do |post|
+      .w-1/2
+        = render 'posts/card', post: post
