--- a/app/views/admin/resources/_nested_form.html.slim
+++ b/app/views/admin/resources/_nested_form.html.slim
@@ -4,9 +4,9 @@ div data-controller="nested-fields" data-nested-fields-all-deletable="true"
   template data-target="nested-fields.template"
     = f.fields_for :resources, Resource.new, child_index: 'NEW_RECORD' do |resource|
       = render "admin/resources/fields", f: resource
-
-  = f.fields_for :resources do |ff|
-    = render "admin/resources/fields", f: ff
+  div data-controller="drag"
+    = f.fields_for :resources do |ff|
+      = render "admin/resources/fields", f: ff
 
   .text-center.mb-3 data-target="nested-fields.links"
     = link_to "#", class: "btn btn-info btn-sm", data: { action: "click->nested-fields#add_association" } do
