--- a/app/views/admin/activities/_form.html.slim
+++ b/app/views/admin/activities/_form.html.slim
@@ -22,5 +22,6 @@
 = render partial: 'admin/shared/picture_form', locals: { \
   f: f, \
   destroy_path: f.object.image.present? ? destroy_upload_admin_activity_path(f.object, f.object.image.id, redirect: :edit) : nil}
+= render "admin/resources/nested_form", f: f
 
 = render "admin/shared/action_btns", f: f, index_path: admin_activities_path
