--- a/app/views/admin/basic_pages/index.html.slim
+++ b/app/views/admin/basic_pages/index.html.slim
@@ -27,6 +27,7 @@ div data-controller='manage-index'
         th Titre
         th Thèmes
         th Pages principales
+        th.text-center Ressources
         th Activé ?
 
         th
@@ -60,6 +61,9 @@ div data-controller='manage-index'
             - basic_page.main_pages.each do |main_page|
               .badge.badge-secondary.mr-2
                 = main_page.title
+          td.text-center
+            = link_to edit_admin_basic_page_path(basic_page, anchor: 'resources'), class: "btn btn-light btn-sm" do
+              = basic_page.resources.count
           td.text-center
             - if basic_page.enabled?
               = boolean_checkmark(basic_page.enabled)
