--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -61,5 +61,7 @@ fieldset.mb-3
   f: f, \
   destroy_path: f.object.image.present? ? destroy_upload_admin_activity_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
+= render "admin/resources/nested_form", f: f
+
 = render "admin/shared/action_btns", f: f, index_path: admin_posts_path
 
