--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -5,7 +5,7 @@
   .mb-24== @basic_page.content
 
   - if @key_numbers
-    .flex
+    .flex.flex-wrap
       - @key_numbers.each do |key_number|
         .w-1/3
           .max-w-md.rounded.overflow-hidden.shadow-lg.border.border-solid.border-gray-300.mb-4.mr-4
@@ -15,5 +15,13 @@
                 p.text-3xl = key_number.title
 
               p.px-6.py-4.text-right.text-sm.italic = key_number.source
-            .px-6.py-4.bg-gray-200
-              == key_number.description
+            - if key_number.description.present?
+              .px-6.py-4.bg-gray-200
+                == key_number.description
+
+  - if @basic_page.resources.any?
+    .w-1/3
+      h3.text-2xl.font-bold.mb-3 Ressources
+      ul
+        = render partial: 'resources/resource', collection: @basic_page.resources, as: :resource
+
