--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,7 +5,14 @@
   flex
   - if @post.image.present?
     = image_tag  @post.image, class: "mb-8 mx-auto"
-  .mb-24== @post.description
+  .flex.mb-24
+    .w-2/3
+      == @post.description
+    - if @post.resources.any?
+      .w-1/3
+        h3.text-2xl.font-bold.mb-3 Ressources
+        ul
+          = render partial: 'resources/resource', collection: @post.resources, as: :resource
 
   .post-footer.flex.justify-between
     p.text-gray-800.mb-2 Publié le #{l(@post.published_at, format: :day)}
