--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -2,7 +2,7 @@
   h1.text-6xl.font-bold.text-center.mt-16.mb-4.text-gray-900 = @basic_page.title
   / - if @basic_page.image.present?
   /   = image_tag  @basic_page.image, class: "mb-8 mx-auto"
-  .mb-24== @basic_page.content
+  .mb-24== @basic_page.description
 
   - if @key_numbers
     .flex.flex-wrap
