--- a/app/views/admin/posts/_layout_form.html.slim
+++ b/app/views/admin/posts/_layout_form.html.slim
@@ -2,7 +2,7 @@
   h1 Édition de l'actualité "#{@post.title}"
 
   div.flex
-    = link_to admin_activities_path, class: "btn btn-light mr-4" do
+    = link_to admin_posts_path, class: "btn btn-light mr-4" do
       i.fa.fa-chevron-left>
       ' Retour
     span.small
