--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,58 +16,11 @@ html lang='fr'
 
   body.h-full
     .relative data-controller="main-menu"
-      nav.side-menu.absolute.top-0.left-0.bg-gray-700.w-48.h-full.text-white data-target="main-menu.sideMenu"
-        .p-6
-          svg.stroke-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
-            line x1="4" y1="80" x2="80" y2="4" rx="8" stroke-width="15"
-            line x1="4" y1="4" x2="80" y2="80"  rx="8" stroke-width="15"
-        - @themes.each do |theme|
-          .text-xl
-            div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
-              = active_link_to theme.title, theme_path(theme), title: theme.title, class: "block w-full px-6 py-4 hover:bg-gray-800 active:bg-gray-800", active: :inclusive
-              nav.block-menu.absolute.top-0.left-side-menu.w-screen-side-menu.bg-gray-800.text-white data-target="main-menu.blockMenu"
-                .p-6
-                  .flex.justify-between.items-center
-                    h3.text-4xl.mb-3
-                      = link_to theme.title, theme_path(theme)
-                    = link_to "En savoir plus", theme_path(theme), class: "underline"
-                  p = theme.baseline
-                .p-6.flex
-                  => image_tag theme.image.variant(resize_to_limit: [150, nil]) if theme.image.present?
-                  .flex.w-full.ml-6
-                    - theme.menu_blocks.each do |menu_block|
-                      .w-1/3
-                        - if menu_block.title.present?
-                          h4.uppercase.font-bold.text-sm = menu_block.title
-                        ul
-                          - if menu_block.title == "Nos actions"
-                            - theme.activities.enabled.order_by_theme_interface_position.first(5).each do |activity|
-                              li = link_to activity.title, activity_path(activity)
-                          - else
-                            - menu_block.menu_items.each do |menu_item|
-                              li = link_to menu_item.title, menu_item.url
-
-        - @main_pages.each do |main_page|
-          .text-xl
-            div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
-              = active_link_to main_page.title, main_page_path(main_page), title: main_page.title, class: "block w-full px-6 py-4 hover:bg-gray-800 active:bg-gray-800", active: :inclusive
-              nav.block-menu.absolute.top-0.left-side-menu.w-screen-side-menu.bg-gray-800.text-white data-target="main-menu.blockMenu"
-                .p-6
-                  .flex.justify-between.items-center
-                    h3.text-4xl.mb-3
-                      = link_to main_page.title, main_page_path(main_page)
-                    = link_to "En savoir plus", main_page_path(main_page), class: "underline"
-                  p = main_page.baseline
-                .p-6.flex
-                  => image_tag main_page.image.variant(resize_to_limit: [150, nil]) if main_page.image.present?
-                  .flex.w-full.ml-6
-                    - main_page.menu_blocks.each do |menu_block|
-                      .w-1/3
-                        - if menu_block.title.present?
-                          h4.uppercase.font-bold.text-sm = menu_block.title
-                        ul
-                          - menu_block.menu_items.each do |menu_item|
-                            li = link_to menu_item.title, menu_item.url
+      / nav.side-menu.absolute.top-0.left-0.bg-gray-700.w-48.h-full.text-white data-target="main-menu.sideMenu"
+      /   .p-6
+      /     svg.stroke-current.cursor-pointer viewBox="0 0 100 80" width="40" height="40" xmlns="http://www.w3.org/2000/svg" data-action="click->main-menu#toggleSideMenu"
+      /       line x1="4" y1="80" x2="80" y2="4" rx="8" stroke-width="15"
+      /       line x1="4" y1="4" x2="80" y2="80"  rx="8" stroke-width="15"
 
       nav.flex.items-center.justify-between.bg-primary.text-white.px-6.py-4
         button.flex.items-center.flex-1
@@ -80,26 +33,63 @@ html lang='fr'
         = link_to root_path, title: "Page d'accueil", class: "block flex items-center w-auto" do
           - if Setting.logo.present?
             => image_tag Setting.logo.variant(resize_to_limit: [nil, 50]), class: "mr-3"
-          / svg.fill-current.h-8.w-8.mr-2 height="54" viewbox=("0 0 54 54") width="54" xmlns="http://www.w3.org/2000/svg" 
-          /   path d=("M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z") /
           span.font-semibold.text-xl.tracking-tight = Setting.project_name
         .flex.items-center.text-white.flex-1.justify-end
           .flex.text-sm.items-center.justify-end
             = link_to "Formations", formations_path, class: "block mr-2"
-            / a.block.hidden.md:inline-block.text-teal-200.hover:text-white.mr-4 href="#responsive-header" 
-            /   | Profils
             a.inline-block.text-sm.px-4.py-2.leading-none.border.rounded.text-white.border-white.ml-2.hover:border-transparent.hover:text-teal-500.hover:bg-white href="#"  Contact
-      nav.bg-gray-800.px-3
+      nav.relative.bg-gray-800.px-3
         div.flex.justify-between.items-center
           div.flex.justify-start.lg:w-0.lg:flex-1
           div.lg:inline-flex.lg:flex-row.lg:m-auto.lg:w-auto.w-full.lg:items-center.items-start.flex.flex-col.lg:h-auto
             - @themes.each do |theme|
-              = link_to theme.title, theme_path(theme), class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+              div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
+                = active_link_to theme.title, theme_path(theme), active: :inclusive, class: "relative lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+                nav.block-menu.absolute.left-0.w-full.bg-gray-800.text-white.border-t.border-white data-target="main-menu.blockMenu"
+                  .p-6
+                    .flex.justify-between.items-center
+                      h3.text-4xl.mb-3
+                        = link_to theme.title, theme_path(theme)
+                      = link_to "En savoir plus", theme_path(theme), class: "underline"
+                    p = theme.baseline
+                  .p-6.flex
+                    => image_tag theme.image.variant(resize_to_limit: [150, nil]) if theme.image.present?
+                    .flex.w-full.ml-6
+                      - theme.menu_blocks.each do |menu_block|
+                        .w-1/3
+                          - if menu_block.title.present?
+                            h4.uppercase.font-bold.text-sm = menu_block.title
+                          ul
+                            - if menu_block.title == "Nos actions"
+                              - theme.activities.enabled.order_by_theme_interface_position.first(5).each do |activity|
+                                li = link_to activity.title, activity_path(activity)
+                            - else
+                              - menu_block.menu_items.each do |menu_item|
+                                li = link_to menu_item.title, menu_item.url
             - @main_pages.each do |main_page|
-              = link_to main_page.title, main_page_path(main_page), class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+              div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
+                = active_link_to main_page.title, main_page_path(main_page), active: :inclusive, class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
+                nav.block-menu.absolute.left-0.w-full.bg-gray-800.text-white.border-t.border-white data-target="main-menu.blockMenu"
+                  .p-6
+                    .flex.justify-between.items-center
+                      h3.text-4xl.mb-3
+                        = link_to main_page.title, main_page_path(main_page)
+                      = link_to "En savoir plus", main_page_path(main_page), class: "underline"
+                    p = main_page.baseline
+                  .p-6.flex
+                    => image_tag main_page.image.variant(resize_to_limit: [150, nil]) if main_page.image.present?
+                    .flex.w-full.ml-6
+                      - main_page.menu_blocks.each do |menu_block|
+                        .w-1/3
+                          - if menu_block.title.present?
+                            h4.uppercase.font-bold.text-sm = menu_block.title
+                          ul
+                            - menu_block.menu_items.each do |menu_item|
+                              li = link_to menu_item.title, menu_item.url
           div.flex.justify-end.lg:w-0.lg:flex-1
             div.lg:inline-flex.lg:flex-row.lg:ml-auto.lg:w-auto.w-full.lg:items-center.items-start.flex.flex-col
               = render 'searches/form'
+
 
       = raw flash_messages
 
