--- a/app/views/admin/participants/index.html.slim
+++ b/app/views/admin/participants/index.html.slim
@@ -1,6 +1,5 @@
-= link_to "Ajouter un participant", formations_path, class:'btn btn-primary float-right', target: '_blank'
+= link_to "Ajouter un·e participant·e", formations_path, class:'btn btn-primary float-right', target: '_blank'
 h1.mb-5 Participant·es
-
 
 div data-controller='manage-index'
   .bg-light.p-3.mb-3
