Add self-reflection for main_pages

--- a/app/views/admin/main_pages/_form.html.slim
+++ b/app/views/admin/main_pages/_form.html.slim
@@ -9,6 +9,10 @@
   = f.text_field :baseline, class: 'form-control'
 
 .form-group
+  = f.label :parent_page_id, class: "font-weight-bold"
+  = f.select :parent_page_id, parent_page_options(MainPage.no_parent.where.not(id: f.object.id)), {include_blank: 'Sans parente'}, class: "form-control"
+
+.form-group
   = f.label :description, class: "font-weight-bold"
   = f.rich_text_area :description
 
