Improve main page management

--- a/app/front/styles/admin/layout.sass
+++ b/app/front/styles/admin/layout.sass
@@ -17,6 +17,7 @@ aside
     &:hover, &:active, &.active
       color: $white
   .nav-header
+    position:relative
     > span
       text-transform: uppercase
       color: darken( $white, 30% )
@@ -32,6 +33,16 @@ aside
           border-left: 5px $white solid
     i
       margin-right: 0.5rem
+    ul ul
+      background: rgba(0,0,0,0.1)
+      padding-left: 20px
+      transition: max-height 0.2s ease-out
+      max-height: 0
+      overflow: hidden
+    li:hover > ul, li.active > ul
+      max-height: 500px
+      transition: max-height 0.25s ease-in
+
 
 .flash-message
   position: absolute
