--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -37,7 +37,7 @@ html lang='fr'
         .flex.items-center.text-white.flex-1.justify-end
           .flex.text-sm.items-center.justify-end
             = link_to "Formations", formations_path, class: "block mr-2"
-            a.inline-block.text-sm.px-4.py-2.leading-none.border.rounded.text-white.border-white.ml-2.hover:border-transparent.hover:text-teal-500.hover:bg-white href="#"  Contact
+            = link_to "Contact", basic_page_path(BasicPage.find_by(key: 'contact')), class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white ml-2 hover:border-transparent hover:text-teal-500 hover:bg-white"
       nav.relative.bg-gray-800.px-3
         div.flex.justify-between.items-center
           div.flex.justify-start.lg:w-0.lg:flex-1
@@ -55,17 +55,18 @@ html lang='fr'
                   .p-6.flex
                     => image_tag theme.image.variant(resize_to_limit: [150, nil]) if theme.image.present?
                     .flex.w-full.ml-6
+                      - if theme.activities.enabled.any?
+                        .w-1/3
+                          h4.uppercase.font-bold.text-sm = "Nos actions"
+                          - theme.activities.enabled.order_by_theme_interface_position.first(5).each do |activity|
+                            li = link_to activity.title, activity_path(activity)
                       - theme.menu_blocks.each do |menu_block|
                         .w-1/3
                           - if menu_block.title.present?
                             h4.uppercase.font-bold.text-sm = menu_block.title
                           ul
-                            - if menu_block.title == "Nos actions"
-                              - theme.activities.enabled.order_by_theme_interface_position.first(5).each do |activity|
-                                li = link_to activity.title, activity_path(activity)
-                            - else
-                              - menu_block.menu_items.each do |menu_item|
-                                li = link_to menu_item.title, menu_item.url
+                            - menu_block.menu_items.each do |menu_item|
+                              li = link_to menu_item.title, menu_item.url
             - @main_pages.each do |main_page|
               div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
                 = active_link_to main_page.title, main_page_path(main_page), active: :inclusive, class: "lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-200 items-center justify-center hover:text-white hover:underline"
@@ -112,9 +113,10 @@ html lang='fr'
           .w-1/3.py-8.text-gray-50
             .text-xl.uppercase Liens rapides
             ul 
+              li = link_to "Actualités", posts_path
               li Actions
               li = link_to "Formations", formations_path
-              li = link_to @key_number_page.title, basic_page_path(@key_number_page)
+              li = link_to @key_number_page.title, main_page_path(@key_number_page)
               li = link_to "Ressources", resources_path
         .w-1/3.py-8
           - if Setting.logo.present?
