--- a/app/views/main_pages/show.html.slim
+++ b/app/views/main_pages/show.html.slim
@@ -5,28 +5,20 @@
     = image_tag  @main_page.image, class: "mb-8 mx-auto"
   .mb-24== @main_page.description
 
+  - if @main_page.key == "key_numbers"
+    = render 'main_pages/key_numbers'
 
   .flex
-    / .w-2/3
-    /   h3.text-2xl.font-bold.mb-3 Les actions en lien avec cette mission
-    /   ul
-        / - @main_page.activities.enabled.order_by_main_page_interface_position.each do |activity|
-        /   li = link_to activity.title, activity_path(activity), class: "underline"
-
     - if @main_page.resources.any?
       .w-1/3
         h3.text-2xl.font-bold.mb-3 Ressources
         ul
           = render partial: 'resources/resource', collection: @main_page.resources, as: :resource
 
-  / h2.text-2xl.font-bold.mt-12.mb-4 Les actualités en lien avec cette mission
-  / - @main_page.posts.each do |post|
-  /   = render 'posts/card', post: post
-
-  - if @main_page.basic_pages.any?
+  - if @main_page.child_pages.any?
     .w-1/3
       h3.text-2xl.font-bold.mb-3 Pour aller plus loin
       ul
-        - @main_page.basic_pages.each do |basic_page|
+        - @main_page.child_pages.each do |child_page|
           li
-            = link_to basic_page.title, basic_page_path(basic_page), class: 'underline'
+            = link_to child_page.title, main_page_path(child_page), class: 'underline'
