--- a/app/views/admin/staff_members/_layout_form.html.slim
+++ b/app/views/admin/staff_members/_layout_form.html.slim
@@ -2,7 +2,7 @@
   h1 Édition du membre de l'équipe "#{@staff_member.title}"
 
   div.flex
-    = link_to admin_activities_path, class: "btn btn-light mr-4" do
+    = link_to admin_staff_members_path, class: "btn btn-light mr-4" do
       i.fa.fa-chevron-left>
       ' Retour
     span.small
